--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,1 @@
-#base
-Django==1.8.3
-Pillow==2.9
-
-#templates
-#=======
-django-widget-tweaks==1.4.1
-
-#slug
-django-autoslug
+-r requirements/base.txt
